Update gitignore and admin, templates, and views files

--- a/app/templates/detalle_libro.html
+++ b/app/templates/detalle_libro.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Página Específica - Mi Sitio Web{% endblock %}
+{% block title %}Libro: {{ libro.titulo }}{% endblock %}
 
 {% block content %}
     <h1>{{ libro.titulo }}</h1>
