Add CSS styles and containers to HTML templates

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} - BibliotecaApp</title>
     <!-- TODO: Incluir CSS común, favicon, etc. -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     {% block content %}
