--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -3,10 +3,14 @@
 {% block title %}Registro de Usuario{% endblock %}
 
 {% block content %}
-    <h1>Registro de Usuario</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrarse</button>
-    </form>
+    <section>
+        <div class="container">
+            <h1>Registro de Usuario</h1>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Registrarse</button>
+            </form>
+        </div>
+    </section>
 {|% endblock %}
