--- a/app/templates/detalle_libro.html
+++ b/app/templates/detalle_libro.html
@@ -3,15 +3,19 @@
 {% block title %}Libro: {{ libro.titulo }}{% endblock %}
 
 {% block content %}
-    <h1>{{ libro.titulo }}</h1>
-    <p><strong>Año de Publicación:</strong> {{ libro.anio_publicacion }}</p>
-    <p><strong>Editorial:</strong> {{ libro.editorial }}</p>
-    <p><strong>Autores:</strong>
-        <ul>
-            {% for autor in libro.autores.all %}
-                <li>{{ autor.nombre }} {{ autor.apellido_paterno }}</li>
-            {% endfor %}
-        </ul>
-    </p>
-    <a href="{% url 'lista-libros' %}">Volver a la lista de libros</a>
+    <section>
+        <div class="container">
+            <h1>{{ libro.titulo }}</h1>
+            <p><strong>Año de Publicación:</strong> {{ libro.anio_publicacion }}</p>
+            <p><strong>Editorial:</strong> {{ libro.editorial }}</p>
+            <p><strong>Autores:</strong>
+                <ul>
+                    {% for autor in libro.autores.all %}
+                        <li>{{ autor.nombre }} {{ autor.apellido_paterno }}</li>
+                    {% endfor %}
+                </ul>
+            </p>
+            <a href="{% url 'lista-libros' %}">Volver a la lista de libros</a>
+        </div>
+    </section>
 {% endblock %}
