Update admin.py, home.html, signup.html, index.html, login.html, lista_libros.html, and urls.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
-
 {% block title %}¡Bienvenidos!{% endblock %}
-
 {% block content %}
-    <section>
-        <div class="container">
-            <h1>BibliotecApp</h1>
-            <p>Esta es la página principal de la aplicación</p>
-            <a href="{% url 'lista-libros' %}">Ver listado de libros</a>
-            <a href="{% url 'signup' %}">Registrarse</a>
-            <a href="{% url 'login' %}">Iniciar Sesión</a>
-        </div>
-    </section>
-{% endblock %}
+<section id="hero" class="d-flex justify-content-center align-items-center">
+  {% if datos %}
+  <h1>Coso</h1>
+  {% endif %}
+
+  <div class="container position-relative">
+    <h1>Lee hoy,<br />Lidera mañana</h1>
+    <h2>Encuentra la mejor selección de libros en nuestra BibliotecApp</h2>
+    <a href="{% url 'lista-libros' %}" class="btn-get-started">Ver libros</a>
+  </div>
+</section>
+{% endblock content %}
