--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,83 +1,206 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}{% endblock %} - BibliotecaApp</title>
+    <title>
+      {% block title %}
+      {% endblock %}- BibliotecaApp
+    </title>
     <!-- TODO: Incluir CSS común, favicon, etc. -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}" />
+    {% load group_check %}
+    <!-- JavaScript -->
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+    <!-- Default theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css" />
+    <!-- Semantic UI theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/semantic.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
+  </head>
 
-<body>
-    <header class="site-header">
-        <div class="container flex">
-            <div class="logo">
-                <a href="/">
-                    <img src="{% static 'img/logo.png' %}" alt="Logo de la Biblioteca" />
-                </a>
-            </div>
+  <body>
+    <header id="header" class="fixed-top">
+      <div class="container d-flex align-items-center">
+        <h1 class="logo me-auto"><a href="/">BibliotecApp</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
-            <div class="flex">
-                <!-- Botón cambiar tema claro/oscuro -->
-                <div class="theme-switcher">
-                    <button id="theme-toggle">Cambiar Tema</button>
-                </div>
-
-                {% if user.is_authenticated %}
-                <!-- Botón de perfil -->
-                <div class="profile">
-                    {% comment %}
-                    <a href="{% url 'profile' %}">
-                        <img src="{% static 'img/profile.png' %}" alt="Perfil" />
-                    </a>
-                    {% endcomment %}
-                </div>
-                {% else %}
-                <!-- Botón de inicio de sesión -->
-                <div class="login">
-                    <a href="{% url 'login' %}">
-                        <img src="{% static 'img/login.png' %}" alt="Iniciar sesión" />
-                    </a>
-                </div>
-                {% endif %}
-            </div>
-        </div>
+        <nav id="navbar" class="navbar order-last order-lg-0">
+          <ul>
+            <li>
+              <a class="active" href="/">Inicio</a>
+            </li>
+            <li>
+              <a href="{% url 'lista-libros' %}">Listado de Libros</a>
+            </li>
+            {% if not user.is_authenticated %}
+              <li>
+                <a href="{% url 'signup' %}">Registrarse</a>
+              </li>
+              <li>
+                <a href="{% url 'login' %}">Iniciar Sesión</a>
+              </li>
+            {% else %}
+              <li class="dropdown">
+                <a href="#"><span>Hola {{ user.username }}</span> <i class="bi bi-chevron-down"></i></a>
+                <ul>
+                  <li>
+                    <a href="{% url 'mis-prestamos' %}">Mis prestamos</a>
+                  </li>
+                  {% if user|has_group:'Bibliotecario' %}
+                    <li class="dropdown">
+                      <a href="#"><span>Dashboard</span> <i class="bi bi-chevron-right"></i></a>
+                      <ul>
+                        <li>
+                          <a href="{% url 'historial' %}">Historial de Movimientos</a>
+                        </li>
+                        <li>
+                          <a href="{% url 'prestamos' %}">Todos los prestamos</a>
+                        </li>
+                      </ul>
+                    </li>
+                  {% endif %}
+                  <li>
+                    <a href="#" class="logout">Cerrar Sesión</a>
+                  </li>
+                </ul>
+              </li>
+            {% endif %}
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+      </div>
     </header>
 
     <main>
-        {% block content %}
+      {% block content %}
         <!-- El contenido específico de la página reemplazará este bloque -->
-        {% endblock %}
+      {% endblock %}
     </main>
 
-    <footer>
-        <p>Desarrollado por Geovanni Molina y Sergio Madriaga</p>
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 footer-contact">
+              <h3>Mentor</h3>
+              <p>
+                A108 Adam Street <br />
+                New York, NY 535022<br />
+                United States <br /><br />
+                <strong>Phone:</strong> +1 5589 55488 55<br />
+                <strong>Email:</strong> info@example.com<br />
+              </p>
+            </div>
+
+            <div class="col-lg-2 col-md-6 footer-links">
+              <h4>Useful Links</h4>
+              <ul>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 footer-links">
+              <h4>Our Services</h4>
+              <ul>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Web Development</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Product Management</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-lg-4 col-md-6 footer-newsletter">
+              <h4>Join Our Newsletter</h4>
+              <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+              <form action="" method="post">
+                <input type="email" name="email" />
+                <input type="submit" value="Subscribe" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container d-md-flex py-4">
+        <div class="me-md-auto text-center text-md-start">
+          <div class="copyright">
+            &copy; <strong><span>BibliotecApp</span></strong>. Todos los derechos reservados.
+          </div>
+          <div class="credits">Desarrollado por Geovanni Molina y Sergio Madriaga</div>
+        </div>
+      </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <script>
-        // Cambiar tema claro/oscuro
-        const themeToggleBtn = document.getElementById("theme-toggle");
-        themeToggleBtn.addEventListener("click", () => {
-            document.documentElement.hasAttribute("data-theme")
-                ? (document.documentElement.removeAttribute("data-theme"),
-                    localStorage.removeItem("theme"))
-                : (document.documentElement.setAttribute("data-theme", "dark"),
-                    localStorage.setItem("theme", "dark"));
-        }),
-            document.addEventListener("DOMContentLoaded", () => {
-                "dark" === localStorage.getItem("theme") &&
-                    document.documentElement.setAttribute("data-theme", "dark");
-            });
-        document.addEventListener("DOMContentLoaded", () => {
-            const savedTheme = localStorage.getItem("theme");
-            if (savedTheme) {
-                document.documentElement.setAttribute("data-theme", savedTheme);
-            }
-        });
+      // Saltar SweetAlert antes de cerra sesión
+      const logout = document.querySelector('.logout')
+      logout.addEventListener('click', (e) => {
+        e.preventDefault()
+        Swal.fire({
+          title: '¿Estás seguro?',
+          text: '¿Quieres cerrar sesión?',
+          icon: 'warning',
+          showCancelButton: true,
+          confirmButtonColor: '#3085d6',
+          cancelButtonColor: '#d33',
+          cancelButtonText: 'Cancelar',
+          confirmButtonText: 'Cerrar Sesión'
+        }).then((result) => {
+          if (result.isConfirmed) {
+            window.location.href = "{% url 'logout' %}"
+          }
+        })
+      })
     </script>
-</body>
-
+    {% if info %}
+      <script>
+        // Mostrar SweetAlert Toast con mensaje de éxito
+        Swal.fire({
+          icon: 'success',
+          title: '{{ mensaje }}',
+          toast: true,
+          position: 'top-end',
+          padding: '1rem',
+          showConfirmButton: false,
+          timer: 3000,
+          timerProgressBar: true
+        })
+      </script>
+    {% endif %}
+  </body>
 </html>
