--- a/app/templates/detalle_libro.html
+++ b/app/templates/detalle_libro.html
@@ -3,19 +3,55 @@
 {% block title %}Libro: {{ libro.titulo }}{% endblock %}
 
 {% block content %}
-    <section>
-        <div class="container">
-            <h1>{{ libro.titulo }}</h1>
-            <p><strong>Año de Publicación:</strong> {{ libro.anio_publicacion }}</p>
-            <p><strong>Editorial:</strong> {{ libro.editorial }}</p>
-            <p><strong>Autores:</strong>
-                <ul>
-                    {% for autor in libro.autores.all %}
-                        <li>{{ autor.nombre }} {{ autor.apellido_paterno }}</li>
-                    {% endfor %}
-                </ul>
-            </p>
-            <a href="{% url 'lista-libros' %}">Volver a la lista de libros</a>
+    <section id="course-details" class="course-details">
+        <div class="container tm-pt-60">
+  
+          <div class="row">
+            <div class="col-lg-8">
+              <img src="{{ libro.imagen.url }}" class="img-fluid" alt="">
+              <h3>{{ libro.titulo }}</h3>
+              <p>
+                {% if libro.descripcion %}
+                    {{ libro.descripcion }}
+                {% else %}
+                    Este libro no tiene una descripción.
+                {% endif %}
+              </p>
+            </div>
+            <div class="col-lg-4">
+                
+            <div class="course-info d-flex justify-content-between align-items-center">
+                <h5>Autores</h5>
+                {% for autor in libro.autores.all %}
+                    <p>{{ autor.nombre }} {{ autor.apellido_paterno }}</p>
+                {% endfor %}
+            </div>
+
+              <div class="course-info d-flex justify-content-between align-items-center">
+                <h5>Año de Publicación</h5>
+                <p>{{ libro.anio_publicacion }}</p>
+              </div>
+  
+              <div class="course-info d-flex justify-content-between align-items-center">
+                <h5>Editorial</h5>
+                <p>{{ libro.editorial }}</p>
+              </div>
+
+              <div class="course-info d-flex justify-content-between align-items-center">
+                <h5>Disponibilidad</h5>
+                <p>{{ libro.stock }}</p>
+              </div>
+
+              
+              {% if user.is_authenticated %}
+              <div class="course-info d-flex justify-content-between align-items-center">
+                <button class="btn btn-primary"><a href="{% url 'nuevo-prestamo' %}" class="text-white">Pedir prestado</a></button>
+              {% else %}
+              <div class="course-info d-flex justify-content-between align-items-center">
+                <button class="btn btn-primary"><a href="{% url 'login' %}" class="text-white">Inicia sesión para pedir prestado</a></button>
+              {% endif %}
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
 {% endblock %}
