--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       {% block title %}
-      {% endblock %}- BibliotecaApp
+      {% endblock %} - BibliotecaApp
     </title>
-    <!-- TODO: Incluir CSS común, favicon, etc. -->
     {% load static %}
     {% load group_check %}
     <!-- JavaScript -->
@@ -59,7 +58,10 @@
                       <a href="#"><span>Dashboard</span> <i class="bi bi-chevron-right"></i></a>
                       <ul>
                         <li>
-                          <a href="{% url 'historial' %}">Historial de Movimientos</a>
+                          <a href="{% url 'historial' %}">Historial de Acciones</a>
+                        </li>
+                        <li>
+                          <a href="{% url 'add-libro' %}">Añadir libro</a>
                         </li>
                         <li>
                           <a href="{% url 'prestamos' %}">Todos los prestamos</a>
@@ -89,66 +91,54 @@
       <div class="footer-top">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Mentor</h3>
+            <div class="col-lg-7 col-md-6 footer-contact">
+              <h3>BibliotecApp</h3>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022<br />
-                United States <br /><br />
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                Av. San Juan #5772<br />
+                Machalí, Ohiggins<br />
+                Chile <br /><br />
+                <strong>Celular:</strong> +56 2 2997 9230 - +56 2 2997 9732<br />
+                <strong>Email:</strong> bibliotecapp.contacto@bibliotecapp.cl<br />
               </p>
             </div>
 
             <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Useful Links</h4>
+              <h4>Nuestros Vinculos</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
+                  <i class="bx bx-chevron-right"></i> <a href="/">Inicio</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                  <i class="bx bx-chevron-right"></i> <a href="/">Sobre Nosotros</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
+                  <i class="bx bx-chevron-right"></i> <a href="/">Servicios</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a>
+                  <i class="bx bx-chevron-right"></i> <a href="/">Terminos del Servicio</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a>
+                  <i class="bx bx-chevron-right"></i> <a href="/">Política de Privacidad</a>
                 </li>
               </ul>
             </div>
 
             <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Our Services</h4>
+              <h4>Sitios Relacionados</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
+                  <i class="bx bx-chevron-right"></i> <a href="https://www.bibliotecaspublicas.gob.cl" target="_blank">Sistema Nacional de Bibliotecas Públicas</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Web Development</a>
+                  <i class="bx bx-chevron-right"></i> <a href="https://www.bibliotecaspublicas.gob.cl" target="_blank">Biblioteca Pública Digital</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Product Management</a>
+                  <i class="bx bx-chevron-right"></i> <a href="https://www.bibliomoviles.gob.cl" target="_blank">Bibliomóviles</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a>
+                  <i class="bx bx-chevron-right"></i> <a href="https://bibliometro.cl" target="_blank">Programa Bibliometro</a>
                 </li>
               </ul>
-            </div>
-
-            <div class="col-lg-4 col-md-6 footer-newsletter">
-              <h4>Join Our Newsletter</h4>
-              <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-              <form action="" method="post">
-                <input type="email" name="email" />
-                <input type="submit" value="Subscribe" />
-              </form>
             </div>
           </div>
         </div>
@@ -202,5 +192,20 @@
         })
       </script>
     {% endif %}
+    {% if group_error or error %}
+    <script>
+      // Mostrar SweetAlert Toast con mensaje de éxito
+      Swal.fire({
+        icon: 'error',
+        title: '{{ group_error }}',
+        toast: true,
+        position: 'top-end',
+        padding: '1rem',
+        showConfirmButton: false,
+        timer: 3000,
+        timerProgressBar: true
+      })
+    </script>
+  {% endif %}
   </body>
 </html>
