--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 {% block title %}¡Bienvenidos!{% endblock %}
+{% load static %}
 {% block content %}
-<section id="hero" class="d-flex justify-content-center align-items-center">
-  {% if datos %}
-  <h1>Coso</h1>
-  {% endif %}
-
+<section id="hero" class="d-flex justify-content-center align-items-center" style="background-image: url({% static 'img/bookshelf.jpg' %});">
   <div class="container position-relative">
     <h1>Lee hoy,<br />Lidera mañana</h1>
     <h2>Encuentra la mejor selección de libros en nuestra BibliotecApp</h2>
