Add forms and views for creating categories, authors, and editorials

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,6 +64,15 @@
                           <a href="{% url 'add-libro' %}">Añadir libro</a>
                         </li>
                         <li>
+                          <a href="{% url 'add-categoria' %}">Añadir categoria</a>
+                        </li>
+                        <li>
+                          <a href="{% url 'add-autor' %}">Añadir autor</a>
+                        </li>
+                        <li>
+                          <a href="{% url 'add-editorial' %}">Añadir editorial</a>
+                        </li>
+                        <li>
                           <a href="{% url 'prestamos' %}">Todos los prestamos</a>
                         </li>
                       </ul>
